# fin

./: .dockerignore  .gitignore  CLAUDE.md
backend/static/: 404.html  index.html  index.txt
backend/static/cache/eslint/: .cache_1u6kvh
backend/tests/: conftest.py  test_api.py  test_llm.py  test_portfolio.py  test_simulator.py  test_watchlist.py
finally/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
finally/backend/: pyproject.toml
finally/backend/app/: main.py  models.py  price_cache.py
finally/backend/app/db/: init.py
finally/backend/app/market/: cache.py  factory.py  interface.py  massive.py  simulator.py
finally/backend/app/routes/: chat.py  portfolio.py  watchlist.py
finally/backend/tests/: test_market.py
finally/planning/: PLAN.md
finally/scripts/: start_mac.sh  start_windows.ps1  stop_mac.sh  stop_windows.ps1
frontend/: .gitignore  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/__tests__/: ChatPanel.test.tsx  PortfolioHeatmap.test.tsx  TradeBar.test.tsx  WatchlistPanel.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AIChat.tsx  Header.tsx  MainChart.tsx  PnLChart.tsx  PortfolioHeatmap.tsx  PositionsTable.tsx  TradeBar.tsx  Watchlist.tsx
frontend/src/hooks/: usePriceStream.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
test/: docker-compose.test.yml  package-lock.json  playwright.config.ts
test/e2e/: chat.spec.ts  fresh-start.spec.ts  portfolio.spec.ts  trading.spec.ts  watchlist.spec.ts
(+18 files in other folders)
