[project]
name = "finally-backend"
version = "0.1.0"
description = "FinAlly AI Trading Workstation backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
